<resources>
    <string name="app_name">Easy Key</string>

    <string name="pinlock_title">Enter 4 digit key</string>
    <string name="pinlock_settitle">Set Pin Code</string>
    <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
    <string name="pinlock_secondtry">Wrong Pin Code: Second Try</string>
    <string name="pinlock_wrongpin">Wrong Pin code</string>
    <string name="pinlock_secondPin">Enter Pin Code Again</string>
    <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
    <string name="pinlock_fingerprint">Use Fingerprint</string>
    <string name="title_activity_app_home_navigation">AppHomeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="username">Email</string>
    <string name="pass">Password</string>
    <string name="remarks">Remarks</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="note_master_password_is_a_unique_password_and_will_be_used_to_edit_or_remove_saved_details_please_remember_it_otherwise_you_would_not_be_able_to_access_details">Note: Master password is a unique password and will be used to edit or remove saved details. Please remember it otherwise you would not be able to access details.</string>
    <string name="enter_master_password">Enter master password.</string>
    <string name="save_master_password">Save master Password</string>
    <string name="reset_master_password">Reset master password</string>
    <string name="enter_old">Enter old password.</string>
    <string name="enter_pass">Enter new password.</string>
    <string name="desc">App require this permision to detect currently open app so that it can give you suggestions in real time.</string>
</resources>
