<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/cats"
            android:title="@string/manage_categories" />
        <item
            android:id="@+id/change_master"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/rate"
            android:icon="@drawable/rate"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/exit"
            android:title="@string/exit" />
    </group>


</menu>
