<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5ccccccc"
    android:orientation="vertical"
    tools:context=".modules_.add_module_.AddWifiPassword">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Wifi Password"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_17sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:src="@drawable/ic_arrow_back_black_24dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="Wifi Name"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:ellipsize="end"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="@string/pass"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="Proxy"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />

            <EditText
                android:id="@+id/web_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:inputType="textUri"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <io.github.ponnamkarthik.richlinkpreview.RichLinkViewTelegram
                android:id="@+id/richLinkView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="Port"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:inputType="number"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="Gateway"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="DNS 1"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="DNS 2"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="5dp"
                android:text="@string/remarks"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <View
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:background="@color/green_app" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:gravity="top"
                android:hint="@string/remarks"
                android:inputType="text"
                android:minLines="3"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingRight="50dp"
                android:paddingBottom="@dimen/margin_10dp"
                android:text="Add"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_17sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>